2000-04-06  Bruce Guenter  <bguenter@bguenter.pointsnorth.com>

	* fdobuf.cc (operator<<): Moved this routine out of an inline
	declaration.

	* iter.h: Moved the mystring_iter declarations into this file.

	* rep.h: Moved the mystringrep declarations into this file.

	* join.h: Moved the mystringjoin declarations into this file.

	* mystring.h (class mystring): Renamed the "find_first" and
	"find_last" routines that scan for items in a set to
	"find_first_of" and "find_last_of".

1999-08-15  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* mystring.h (class mystring_iter): Changed the default seperator
	for strings to '\0'
	(class mystring): Added a NUL constant (single 0 byte string).

1999-07-26  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* mystring.h (class mystring_iter): Added this new iterator class,
	taken from code used in vmailmgr.  It is used to iterate over
	essentially a token-delimited string.

1999-07-14  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* Removed all vestiges of mystringtmp support from this library.

1999-07-13  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* append.cc: Fixed same bug as below in append.

	* assign.cc: Fixed bug in assign and dup where NULL pointers
	caused a crash.

	* append.cc, assign.cc: removed the mystringtmp versions of the
	append, assign, and dup operations.  mystringtmp now only exists
	in the cons[2-7].cc files and tmp.cc

	* find.cc: Split this file into find_first, find_first_of,
	find_last, and find_last_of.

1999-07-12  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* join.cc (traverse): This routine traverses the linked list and
	builds a mystringrep out of it.

	* mystring.h: Renamed TRACE to MYSTRING_TRACE.
	Added a new mystringjoin class.  This class is used to turn a list
	of calls to "operator+" into a single constructor by building a
	linked list on the stack.  This will replace mystringtmp.

	* rep.cc (struct _rep_stats): Fixed the percentage function to not